# scCDX

./: README.md  pyproject.toml  tabnet_env.yml
baselines/: README.md
baselines/GCN/: GCN.py  GCN_cv.py  model.py
baselines/MODIG/: main.py  main_cv.py  modig.py  modig_graph.py
baselines/MRNGCN/: get_BA.py  model_all.py  model_other.py  model_pretrain.py  pretrain.py  train.py  train_cv.py
data/: HGNC_v2023.05.08.txt
data/feature/: TOPO.pkl  entrez2gene.txt
data/label/: pancan_genelist_for_train.tsv
notebooks/: independent.ipynb  preprocessing.ipynb
src/: crossvalid.py  deepwalk.py  hparams.json  model.py  preprocessing.py  utils.py
